# glakkeclock

./: CHANGELOG.txt  CMakeLists.txt  PKGBUILD  README.markup  README.md  README.txt  READMERAW.txt  glakkeclock.html
cmake/: FindADL.cmake
man/man1/: glakkeclock.1
src/: ADL_Defs.hpp  Device.cpp  Device.hpp  GlakkeClock.cpp  GlakkeClock.hpp  NonCopyable.hpp  kkeADL.cpp  kkeADL.hpp  main.cpp
src/ArgParser/: ArgParser.cpp  ArgParser.hpp  Argument.cpp  Argument.hpp
src/Debug/: Logger.cpp  Logger.hpp
src/IO/: ArgParser.cpp  ArgParser.hpp  Argument.cpp  Argument.hpp
src/Interface/: Noncopyable.hpp
